versions/v4.2.0/build/dts/api/bindings/sensor/st,lis2dux12-i2c.md
---
version: v4.2.0
source_url: https://docs.zephyrproject.org/4.2.0/build/dts/api/bindings/sensor/st,lis2dux12-i2c.html
original_path: build/dts/api/bindings/sensor/st,lis2dux12-i2c.html
---

# st,lis2dux12 (on i2c bus)

Vendor: [STMicroelectronics](../../bindings.md#dt-vendor-st)

Note

An implementation of a driver matching this compatible is available in
[drivers/sensor/st/lis2dux12/lis2dux12.c](https://github.com/zephyrproject-rtos/zephyr/blob/main/drivers/sensor/st/lis2dux12/lis2dux12.c).

## Description

```text
STMicroelectronics LIS2DUX12 3-axis accelerometer
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `supply-gpios` | `phandle-array` | ```text GPIO specifier that controls power to the device.  This property should be provided when the device has a dedicated switch that controls power to the device.  The supply state is entirely the responsibility of the device driver.  Contrast with vin-supply. ``` |
| `vin-supply` | `phandle` | ```text Reference to the regulator that controls power to the device. The referenced devicetree node must have a regulator compatible.  This property should be provided when device power is supplied by a shared regulator.  The supply state is dependent on the request status of all devices fed by the regulator.  Contrast with supply-gpios.  If both properties are provided then the regulator must be requested before the supply GPIOS is set to an active state, and the supply GPIOS must be set to an inactive state before releasing the regulator. ``` |
| `int1-gpios` | `phandle-array` | ```text INT1 pin  This pin defaults to active high when produced by the sensor. The property value should ensure the flags properly describe the signal that is presented to the driver. ``` |
| `int2-gpios` | `phandle-array` | ```text INT2 pin  This pin defaults to active high when produced by the sensor. The property value should ensure the flags properly describe the signal that is presented to the driver. ``` |
| `drdy-pin` | `int` | ```text Select DRDY pin number (1 or 2). This number represents which of the two interrupt pins (INT1 or INT2) the drdy line is attached to. This property is not mandatory and if not present it defaults to 1 which is the configuration at power-up. ```  Default value: `1`  Legal values: `1`, `2` |
| `range` | `int` | ```text Range in g. Default is power-up configuration.  - 3  # LIS2DUX12_DT_FS_16G - 2  # LIS2DUX12_DT_FS_8G - 1  # LIS2DUX12_DT_FS_4G - 0  # LIS2DUX12_DT_FS_2G ```  Legal values: `0`, `1`, `2`, `3` |
| `power-mode` | `int` | ```text Specify the sensor power mode. Default is power-down mode  - 0 # LIS2DUX12_OPER_MODE_POWER_DOWN - 1 # LIS2DUX12_OPER_MODE_LOW_POWER - 2 # LIS2DUX12_OPER_MODE_HIGH_PERFORMANCE - 3 # LIS2DUX12_OPER_MODE_SINGLE_SHOT ```  Legal values: `0`, `1`, `2`, `3` |
| `odr` | `int` | ```text Specify the default output data rate expressed in samples per second (Hz). Default is power-down mode - 0  # LIS2DUX12_DT_ODR_OFF - 1  # LIS2DUX12_DT_ODR_1Hz_ULP - 2  # LIS2DUX12_DT_ODR_3Hz_ULP - 3  # LIS2DUX12_DT_ODR_25Hz_ULP - 4  # LIS2DUX12_DT_ODR_6Hz - 5  # LIS2DUX12_DT_ODR_12Hz5 - 6  # LIS2DUX12_DT_ODR_25Hz - 7  # LIS2DUX12_DT_ODR_50Hz - 8  # LIS2DUX12_DT_ODR_100Hz - 9  # LIS2DUX12_DT_ODR_200Hz - 10 # LIS2DUX12_DT_ODR_400Hz - 11 # LIS2DUX12_DT_ODR_800Hz ```  Legal values: `0`, `1`, `2`, `3`, `4`, `5`, `6`, `7`, `8`, `9`, `10`, `11` |
| `fifo-mode-sel` | `int` | ```text Specify the sample content to be batched in FIFO. Default is power-up configuration.  - 0x0 # 1x Accelerometer @12bit and 1x temperature @12bit samples - 0x1 # 1x Accelerometer @16bit sample - 0x2 # 2x Accelerometer @8bit samples (previous and current) ```  Legal values: `0`, `1`, `2` |
| `fifo-watermark` | `int` | ```text Specify the default FIFO watermark threshold. Every unit indicates a FIFO row (1 byte of TAG + 6 bytes of data). (min 0; max 255) A typical threshold value is 32 which is then used as default. ```  Default value: `32` |
| `accel-fifo-batch-rate` | `int` | ```text Specify the default accelerometer FIFO batch data rate expressed as a fraction of the odr. The values are taken in accordance to lis2dux12_bdr_xl_t enumerative in hal/st module. Default is power-up configuration.  - 0x0 # LIS2DUX12_DT_BDR_XL_ODR - 0x1 # LIS2DUX12_DT_BDR_XL_ODR_DIV_2 - 0x2 # LIS2DUX12_DT_BDR_XL_ODR_DIV_4 - 0x3 # LIS2DUX12_DT_BDR_XL_ODR_DIV_8 - 0x4 # LIS2DUX12_DT_BDR_XL_ODR_DIV_16 - 0x5 # LIS2DUX12_DT_BDR_XL_ODR_DIV_32 - 0x6 # LIS2DUX12_DT_BDR_XL_ODR_DIV_64 - 0x7 # LIS2DUX12_DT_BDR_XL_ODR_OFF ```  Legal values: `0`, `1`, `2`, `3`, `4`, `5`, `6`, `7` |
| `timestamp-fifo-batch-rate` | `int` | ```text Specify the default timestamp FIFO batch data rate expressed as a fraction od the odr. The values are taken in accordance to lis2dux12_dec_ts_t enumerative in hal/st module. Default is power-up configuration.  - 0x0 # LIS2DUX12_DT_DEC_TS_OFF - 0x1 # LIS2DUX12_DT_DEC_TS_1 - 0x2 # LIS2DUX12_DT_DEC_TS_8 - 0x3 # LIS2DUX12_DT_DEC_TS_32 ```  Legal values: `0`, `1`, `2`, `3` |
| `friendly-name` | `string` | ```text Human readable string describing the sensor. It can be used to distinguish multiple instances of the same model (e.g., lid accelerometer vs. base accelerometer in a laptop) to a host operating system.  This property is defined in the Generic Sensor Property Usages of the HID Usage Tables specification (https://usb.org/sites/default/files/hut1_3_0.pdf, section 22.5). ``` |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “st,lis2dux12” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `reg` | `array` | ```text device address on i2c bus ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `status` | `string` | ```text Indicates the operational status of the hardware or other resource that the node represents. In particular:    - "okay" means the resource is operational and, for example,     can be used by device drivers   - "disabled" means the resource is not operational and the system     should treat it as if it is not present  For details, see "2.3.4 status" in Devicetree Specification v0.4. ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text This property is a list of strings that essentially define what type of hardware or other resource this devicetree node represents. Each device driver checks for specific compatible property values to find the devicetree nodes that represent resources that the driver should manage.  The recommended format is "vendor,device", The "vendor" part is an abbreviated name of the vendor. The "device" is usually from the datasheet.  The compatible property can have multiple values, ordered from most- to least-specific. Having additional values is useful when the device is a specific instance of a more general family, to allow the system to match the most specific driver available.  For details, see "2.3.1 compatible" in Devicetree Specification v0.4. ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text Optional names given to each register block in the "reg" property. For example:    / {        soc {            #address-cells = <1>;            #size-cells = <1>;             uart@1000 {                reg = <0x1000 0x2000>, <0x3000 0x4000>;                reg-names = "foo", "bar";            };        };   };  The uart@1000 node has two register blocks:    - one with base address 0x1000, size 0x2000, and name "foo"   - another with base address 0x3000, size 0x4000, and name "bar" ``` |
| `interrupts` | `array` | ```text Information about interrupts generated by the device, encoded as an array of one or more interrupt specifiers. The format of the data in this property varies by where the device appears in the interrupt tree. Devices with the same "interrupt-parent" will use the same format in their interrupts properties.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text Extended interrupt specifier for device, used as an alternative to the "interrupts" property.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ``` |
| `interrupt-names` | `string-array` | ```text Optional names given to each interrupt generated by a device. The interrupts themselves are defined in either "interrupts" or "interrupts-extended" properties.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ``` |
| `interrupt-parent` | `phandle` | ```text If present, this refers to the node which handles interrupts generated by this device.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ``` |
| `label` | `string` | ```text Human readable string describing the device. Use of this property is deprecated except as needed on a case-by-case basis.  For details, see "4.1.2 Miscellaneous Properties" in Devicetree Specification v0.4. ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `clocks` | `phandle-array` | ```text Information about the device's clock providers. In general, this property should follow conventions established in the dt-schema binding:    https://github.com/devicetree-org/dt-schema/blob/main/dtschema/schemas/clock/clock.yaml ``` |
| `clock-names` | `string-array` | ```text Optional names given to each clock provider in the "clocks" property. ``` |
| `#address-cells` | `int` | ```text This property encodes the number of <u32> cells used by address fields in "reg" properties in this node's children.  For details, see "2.3.5 #address-cells and #size-cells" in Devicetree Specification v0.4. ``` |
| `#size-cells` | `int` | ```text This property encodes the number of <u32> cells used by size fields in "reg" properties in this node's children.  For details, see "2.3.5 #address-cells and #size-cells" in Devicetree Specification v0.4. ``` |
| `dmas` | `phandle-array` | ```text DMA channel specifiers relevant to the device. ``` |
| `dma-names` | `string-array` | ```text Optional names given to the DMA channel specifiers in the "dmas" property. ``` |
| `io-channels` | `phandle-array` | ```text IO channel specifiers relevant to the device. ``` |
| `io-channel-names` | `string-array` | ```text Optional names given to the IO channel specifiers in the "io-channels" property. ``` |
| `mboxes` | `phandle-array` | ```text Mailbox / IPM channel specifiers relevant to the device. ``` |
| `mbox-names` | `string-array` | ```text Optional names given to the mbox specifiers in the "mboxes" property. ``` |
| `power-domains` | `phandle-array` | ```text Power domain specifiers relevant to the device. ``` |
| `power-domain-names` | `string-array` | ```text Optional names given to the power domain specifiers in the "power-domains" property. ``` |
| `#power-domain-cells` | `int` | ```text Number of cells in power-domains property ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
